make the venue at the top clickable to jump to the venue section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
           September <strong>6-7, 2019</strong>
         </div>
         <div class="app-header__venue">
-          Venue: <strong>Pullman Bangkok King Power</strong>
+          <a href="#venue">Venue: <strong>Pullman Bangkok King Power</strong></a>
         </div>
       </div>
     </div>
