i think “view map” is a clearer button name than “get location”

--- a/_includes/map-venue.html
+++ b/_includes/map-venue.html
@@ -11,7 +11,7 @@
       <span class="locality">Bangkok</span>
       <span class="postal-code">10400</span>
     </address>
-    <a href="https://goo.gl/maps/vnLpSxt1zzw" target="_blank" class="map-venue__btn btn btn--primary btn--lg">Get Location</a>
+    <a href="https://goo.gl/maps/vnLpSxt1zzw" target="_blank" class="map-venue__btn btn btn--primary btn--lg">View Map</a>
   </div>
 </div>
 {% endcapture %}
