add back a temporary CTA button until ticket sales are available

--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -44,7 +44,7 @@ body.home .app-content {
   }
 }
 
-body.home .home-speaker {
+body.home .home-speaker, body.home .home-hero {
   .call-to-action__btn {
     @include media-breakpoint-up('md') {
       width: rem(300px);
