Replace the link in the header by a div as there is no need for a link altogether

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header id="home" class="app-header">
   <div class="container">
     <div class="app-header__event">
-      <a class="app-header__logo logo logo--text-icon">
+      <div class="app-header__logo logo logo--text-icon">
         <span class="sr-only">RubyConf TH {💎}</span>
-      </a>
+      </div>
 
       <div class="app-header__logistic">
         <div class="app-header__date">
