--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -115,5 +115,9 @@ body.home .home-sponsor {
 
   .call-to-action {
     margin-top: 2rem;
+
+    @include media-breakpoint-up('lg') {
+      margin-top: 1.5rem;
+    }
   }
 }
