--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,10 @@
           </li>
         </ul>
 
+        <div class="app-navigation__register">
+          <a href="https://www.eventpop.me/e/5111-rubyconfth-2019" target="_blank" class="btn btn--primary">Register Now</a>
+        </div>
+
         <hr/>
 
         {% include list-social-platform.html %}
