--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import 'functions/image-url';
 @import 'functions/sizing';
 
+@import 'mixins/line-height';
+
 @import 'base/font';
 @import 'base/root';
 @import 'base/typography';
@@ -26,6 +28,8 @@
 @import 'components/app-navigation';
 @import 'components/btn';
 @import 'components/display-heading';
+@import 'components/form';
+@import 'components/form-mailing-list';
 @import 'components/icon';
 @import 'components/icon-hamburger';
 @import 'components/link';
