--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,31 @@
 <footer class="app-footer">
-  <div class="container">
-    <div class="app-footer__brand">
-      <a href="/" class="logo logo--icon">
-        <span class="sr-only">RubyConf TH {💎}</span>
-      </a>
-      <span class="app-footer__copy">&copy; 2019 Bangkok.rb</span>
+  <div class="app-footer__mailing">
+    <div class="container">
+      <h3>Join our mailing list</h3>
+      <p>Sign up to receive updates about the conference</p>
+      <form class="form-mailing-list form app-footer__form">
+        <div class="form__group">
+          <input type="email" placeholder="Enter your email address" class="form__control form__control--lg" />
+        </div>
+        <button type="submit" class="form-mailing-list__btn btn btn--primary">Add me</button>
+      </form>
     </div>
+  </div>
 
-    <ul class="app-footer__list-link list--unstyled">
-      <li class="app-footer__list-link-item">
-        <a href="http://confcodeofconduct.com/" target="_blank" class="app-footer__link link link--secondary">Code of Conduct</a>
-      </li>
-    </ul>
+  <div class="app-footer__footnote">
+    <div class="container">
+      <div class="app-footer__brand">
+        <a href="/" class="logo logo--icon">
+          <span class="sr-only">RubyConf TH {💎}</span>
+        </a>
+        <span class="app-footer__copy">&copy; 2019 Bangkok.rb</span>
+      </div>
+
+      <ul class="app-footer__list-link list--unstyled">
+        <li class="app-footer__list-link-item">
+          <a href="http://confcodeofconduct.com/" target="_blank" class="app-footer__link link link--secondary">Code of Conduct</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </footer>
