--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,11 @@
     <div class="container">
       <h3>Join our mailing list</h3>
       <p>Sign up to receive updates about the conference</p>
-      <form class="form-mailing-list form app-footer__form">
+      <form action="https://rubyconfth.us20.list-manage.com/subscribe/post?u=fd4a02525718b1d58ebaed6a0&id=4af9421776" method="post" class="form-mailing-list form app-footer__form" target="_blank">
         <div class="form__group">
-          <input type="email" placeholder="Enter your email address" class="form__control form__control--lg" />
+          <input type="email" name="EMAIL" placeholder="Enter your email address" class="form__control form__control--lg" required />
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fd4a02525718b1d58ebaed6a0_4af9421776" tabindex="-1" value=""></div>
         </div>
         <button type="submit" class="form-mailing-list__btn btn btn--primary">Add me</button>
       </form>
