--- a/_sass/components/_app-footer.scss
+++ b/_sass/components/_app-footer.scss
@@ -50,18 +50,18 @@
     }
   }
 
-  &__brand {
+  .app-footer__brand {
     display: flex;
     align-items: center;
   }
 
-  &__copy {
+  .app-footer__copy {
     margin-left: 1.25rem;
 
     font-size: map-get($font-sizes, 'sm');
   }
 
-  &__list-link {
+  .app-footer__list-link {
     display: none;
 
     @include media-breakpoint-up('lg') {
@@ -69,7 +69,7 @@
     }
   }
 
-  &__link {
+  .app-footer__link {
     font-size: map-get($font-sizes, 'sm');
   }
 }
