--- a/_sass/components/_list-keynote-speaker.scss
+++ b/_sass/components/_list-keynote-speaker.scss
@@ -1,17 +1,11 @@
 .list-keynote-speaker {
-  $gutter-width-lg: 80px;
+  $photo-size-md: 200px;
 
   @include media-breakpoint-up('md') {
     @include make-row();
   }
 
-  @include media-breakpoint-up('lg') {
-    @include make-row($gutter-width-lg);
-  }
-
   &__item {
-    padding: 0 $grid-gutter-width * 1.5;
-
     @include media-breakpoint-down('md') {
       &:not(:last-child) {
         margin-bottom: rem(50px);
@@ -20,18 +14,27 @@
 
     @include media-breakpoint-up('md') {
       @include make-col-ready();
-      @include make-col(4);
+      @include make-col(6);
 
       margin-bottom: 0;
     }
+  }
 
-    @include media-breakpoint-up('lg') {
-      @include make-col-ready($gutter-width-lg);
+  &__profile {
+    @include media-breakpoint-up('md') {
+      display: flex;
+      flex-wrap: wrap;
     }
   }
 
   &__photo {
     width: 100%;
+
+    @include media-breakpoint-up('md') {
+      width: $photo-size-md;
+      height: 100%;
+      order: 0;
+    }
   }
 
   &__name {
@@ -40,13 +43,23 @@
     @include media-breakpoint-only('md') {
       font-size: map-get($font-sizes, 'lg');
     }
+
+    @include media-breakpoint-up('md') {
+      flex: 100% 0 0;
+      order: 2;
+    }
   }
 
-  &__links {
+  &__link {
     font-size: map-get($font-sizes, 'lg');
 
     @include media-breakpoint-only('md') {
       font-size: map-get($font-sizes, 'default');
+    }
+
+    @include media-breakpoint-up('md') {
+      flex: 100% 0 0;
+      order: 2;
     }
   }
 
@@ -54,16 +67,27 @@
     position: relative;
 
     margin-bottom: 0;
-    padding-top: 40px;
+    padding-top: rem(40px);
+
+    @include media-breakpoint-up('md') {
+      order: 1;
+
+      width: calc(100% - #{$photo-size-md});
+      padding: rem(22px);
+
+      border: 2px solid map-get($color-gray, 'primary');
+    }
 
     &:before {
-      content: '';
-      position: absolute;
-      top: 20px;
+      @include media-breakpoint-down('sm') {
+        content: '';
+        position: absolute;
+        top: 20px;
 
-      width: 100%;
-      height: 1px;
-      background: $body-color;
+        width: 100%;
+        height: 1px;
+        background: $body-color;
+      }
     }
 
     a {
