Add Agenda section to the homepage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,9 @@
             <a href="#speakers" class="app-navigation__menu-link app-navigation__link">Speakers</a>
           </li>
           <li class="app-navigation__menu-item">
+            <a href="#agenda" class="app-navigation__menu-link app-navigation__link">Agenda</a>
+          </li>
+          <li class="app-navigation__menu-item">
             <a href="#venue" class="app-navigation__menu-link app-navigation__link">Venue</a>
           </li>
           <li class="app-navigation__menu-item">
