Implement tentative schedule styling

--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -1,57 +1,61 @@
 <div class="schedule">
   <div class="schedule__item">
-    <time datetime="2019-09-06" class="schedule__day">
+    <time datetime="2019-09-06" class="schedule__date">
       <span class="schedule__month">Sep</span>
-      <span class="schedule__day-of-week">O6</span>
+      <span class="schedule__day-of-week">6</span>
     </time>
-    <h3 class="schedule__title">
-      Day #1
-    </h3>
-    <ul class="schedule__list-event">
-      <li class="schedule__event">
-        <time class="schedule__time-slot">9 AM - 10 AM</time>
-        <span class="schedule__event-name">Registration</span>
-      </li>
-      <li class="schedule__event">
-        <time class="schedule__time-slot">10 AM - 1 PM</time>
-        <span class="schedule__event-name">Talks</span>
-      </li>
-      <li class="schedule__event">
-        <time class="schedule__time-slot">1 PM - 2 PM</time>
-        <span class="schedule__event-name">Buffet Lunch</span>
-      </li>
-      <li class="schedule__event">
-        <time class="schedule__time-slot">2 PM - 5 PM</time>
-        <span class="schedule__event-name">Talks</span>
-      </li>
-      <li class="schedule__event">
-        <time class="schedule__time-slot">6 PM - Late</time>
-        <span class="schedule__event-name">After-Party</span>
-      </li>
-    </ul>
+    <div class="schedule__day">
+      <h3 class="schedule__title">
+        Day #1
+      </h3>
+      <ul class="schedule__list-event">
+        <li class="schedule__event">
+          <time class="schedule__time-slot">9 AM - 10 AM</time>
+          <span class="schedule__event-name">Registration</span>
+        </li>
+        <li class="schedule__event">
+          <time class="schedule__time-slot">10 AM - 1 PM</time>
+          <span class="schedule__event-name">Talks</span>
+        </li>
+        <li class="schedule__event">
+          <time class="schedule__time-slot">1 PM - 2 PM</time>
+          <span class="schedule__event-name">Buffet Lunch</span>
+        </li>
+        <li class="schedule__event">
+          <time class="schedule__time-slot">2 PM - 5 PM</time>
+          <span class="schedule__event-name">Talks</span>
+        </li>
+        <li class="schedule__event">
+          <time class="schedule__time-slot">6 PM - Late</time>
+          <span class="schedule__event-name">After-Party</span>
+        </li>
+      </ul>
+    </div>
   </div>
 
   <div class="schedule__item">
-    <time datetime="2019-09-07" class="schedule__day">
+    <time datetime="2019-09-07" class="schedule__date">
       <span class="schedule__month">Sep</span>
-      <span class="schedule__day-of-week">07</span>
+      <span class="schedule__day-of-week">7</span>
     </time>
-    <h3 class="schedule__title">
-      Day #2
-    </h3>
-    <ul class="schedule__list-event">
-      <li class="schedule__event">
-        <time class="schedule__time-slot">10 AM - 1 PM</time>
-        <span class="schedule__event-name">Talks</span>
-      </li>
-      <li class="schedule__event">
-        <time class="schedule__time-slot">1 PM - 2 PM</time>
-        <span class="schedule__event-name">Buffet Lunch</span>
-      </li>
-      <li class="schedule__event">
-        <time class="schedule__time-slot">2 PM - 5 PM</time>
-        <span class="schedule__event-name">Talks</span>
-      </li>
-    </ul>
+    <div class="schedule__day">
+      <h3 class="schedule__title">
+        Day #2
+      </h3>
+      <ul class="schedule__list-event">
+        <li class="schedule__event">
+          <time class="schedule__time-slot">10 AM - 1 PM</time>
+          <span class="schedule__event-name">Talks</span>
+        </li>
+        <li class="schedule__event">
+          <time class="schedule__time-slot">1 PM - 2 PM</time>
+          <span class="schedule__event-name">Buffet Lunch</span>
+        </li>
+        <li class="schedule__event">
+          <time class="schedule__time-slot">2 PM - 5 PM</time>
+          <span class="schedule__event-name">Talks</span>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
