--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -40,5 +40,6 @@
 @import 'components/list-social-platform';
 @import 'components/map';
 @import 'components/map-venue';
+@import 'components/schedule';
 
 @import 'screens/home';
