--- a/_sass/components/_list-keynote-speaker.scss
+++ b/_sass/components/_list-keynote-speaker.scss
@@ -16,12 +16,14 @@
       @include make-col-ready();
       @include make-col(6);
 
-      margin-bottom: 0;
+      &:nth-child(-n + 2) {
+        margin-bottom: rem(30px);
+      }
     }
   }
 
   &__profile {
-    @include media-breakpoint-up('md') {
+    @include media-breakpoint-up('lg') {
       display: flex;
       flex-wrap: wrap;
     }
@@ -30,7 +32,7 @@
   &__photo {
     width: 100%;
 
-    @include media-breakpoint-up('md') {
+    @include media-breakpoint-up('lg') {
       width: $photo-size-md;
       height: 100%;
       order: 0;
@@ -44,7 +46,7 @@
       font-size: map-get($font-sizes, 'lg');
     }
 
-    @include media-breakpoint-up('md') {
+    @include media-breakpoint-up('lg') {
       flex: 100% 0 0;
       order: 2;
     }
@@ -57,9 +59,11 @@
       font-size: map-get($font-sizes, 'default');
     }
 
-    @include media-breakpoint-up('md') {
+    @include media-breakpoint-up('lg') {
       flex: 100% 0 0;
       order: 2;
+
+      line-height: 1;
     }
   }
 
@@ -69,24 +73,40 @@
     margin-bottom: 0;
     padding-top: rem(40px);
 
-    @include media-breakpoint-up('md') {
+    @include media-breakpoint-up('lg') {
       order: 1;
 
       width: calc(100% - #{$photo-size-md});
-      padding: rem(22px);
+      padding: rem(12px);
+
+      font-size: rem(13px);
 
       border: 2px solid map-get($color-gray, 'primary');
+      border-left: none;
     }
 
     &:before {
+      content: '';
+      position: absolute;
+      background: $body-color;
+
+      // Thin black line separating the bio from the speaker name + Twitter handle
       @include media-breakpoint-down('sm') {
-        content: '';
-        position: absolute;
         top: 20px;
 
         width: 100%;
         height: 1px;
-        background: $body-color;
+      }
+
+      // Thin black line filling in the gaps between the rounded corner of the photo
+      // and the rectangle for teh bio
+      @include media-breakpoint-up('lg') {
+        top: -2px;
+        left: -2px;
+        z-index: map-get($zIndex, 'behind');
+
+        width: 2px;
+        height: calc(100% + 4px);
       }
     }
 
