--- a/_sass/components/_schedule.scss
+++ b/_sass/components/_schedule.scss
@@ -6,9 +6,17 @@
   &__item {
     display: flex;
 
-    @include media-breakpoint-up('md'){
+    @include media-breakpoint-up('md') {
       @include make-col-ready();
       @include make-col(6);
+    }
+
+    &:not(:first-child) {
+      margin-top: rem(32px);
+
+      @include media-breakpoint-up('md') {
+        margin-top: 0;
+      }
     }
   }
 }
@@ -18,6 +26,10 @@
 
   font-weight: bold;
   text-transform: uppercase;
+
+  @include media-breakpoint-only('md') {
+    flex: 50px 0 0;
+  }
 
   .schedule__month,
   .schedule__day-of-week {
