--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
         </ul>
 
         <div class="app-navigation__register">
-          <a href="https://www.eventpop.me/e/5111-rubyconfth-2019" target="_blank" class="btn btn--primary">Register Now</a>
+          <a href="https://www.eventpop.me/e/5111-rubyconfth-2019" target="_blank" class="btn btn--primary">Buy Tickets</a>
         </div>
 
         <hr/>
