Setup Segment analytics script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
 
 {% include footer.html %}
 
+{% if jekyll.environment == "production" %}
+  {% include analytics.html %}
+{% endif %}
+
 <script src="/assets/javascript/vendor.js"></script>
 <script src="/assets/javascript/application.js"></script>
 </body>
