Apply spacing for sponsor levels only on large screens

--- a/_sass/components/_list-sponsor.scss
+++ b/_sass/components/_list-sponsor.scss
@@ -4,7 +4,9 @@
   }
 
   &__level {
-    margin-top: 1rem;
+    @include media-breakpoint-up('lg') {
+      margin-top: 1rem;
+    }
   }
 
   &__list-company {
