Add Rapid River Software as Gold sponsor (#75)
* Add Rapid River Software as a Gold sponsor

* Reduce the sizer of the Eventpop logo comparatively to the Gold sponsors

* Apply spacing for sponsor levels only on large screens

* Reduce the size of the Eventpop logo even more  comparatively to the Gold sponsors

* Reduce the size of the Nimble logo comparatively to the Gold sponsors

--- a/_sass/components/_list-sponsor.scss
+++ b/_sass/components/_list-sponsor.scss
@@ -3,6 +3,12 @@
     font-weight: 300;
   }
 
+  &__level {
+    @include media-breakpoint-up('lg') {
+      margin-top: 1rem;
+    }
+  }
+
   &__list-company {
     padding: rem(30px) 0;
   }
