--- a/_sass/components/_list-sponsor.scss
+++ b/_sass/components/_list-sponsor.scss
@@ -21,3 +21,43 @@
     }
   }
 }
+
+.list-sponsor__list-company {
+  &--gold {
+    @include media-breakpoint-up('md') {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      .list-sponsor__company {
+        @include media-breakpoint-up('md') {
+          flex: 50% 1 1;
+        }
+
+        @include media-breakpoint-up('lg') {
+          flex: auto 1 1;
+        }
+      }
+    }
+  }
+
+  &--partner {
+    @include media-breakpoint-up('md') {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .list-sponsor__company {
+      @include media-breakpoint-up('md') {
+        flex: 50% 1 1;
+      }
+
+      @include media-breakpoint-up('lg') {
+        flex: auto 1 1;
+      }
+    }
+  }
+}
