Adjust afternoon schedule on Day 1 to reflect the current naming and time

--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -20,12 +20,12 @@
           <span class="schedule__event-name">Buffet Lunch</span>
         </li>
         <li class="schedule__event">
-          <time class="schedule__time-slot">2 PM - 5 PM</time>
+          <time class="schedule__time-slot">2 PM - 6 PM</time>
           <span class="schedule__event-name">Talks</span>
         </li>
         <li class="schedule__event">
-          <time class="schedule__time-slot">6 PM - Late</time>
-          <span class="schedule__event-name">After-Party</span>
+          <time class="schedule__time-slot">7 PM - Late</time>
+          <span class="schedule__event-name">Official Party</span>
         </li>
       </ul>
     </div>
