Add travel guide and short transportation introduction to the venue

--- a/_includes/map-venue.html
+++ b/_includes/map-venue.html
@@ -1,4 +1,6 @@
 <div class="map-venue">
+  <p>The event will take place in the heart of Bangkok in the conveniently located Pullman Bangkok King Power near Victory Monument. The venue is accessible both by BTS (Victory Monument) and the Airport Link (Phaya Thai).</p>
+  <p>First time in Bangkok? Or planning to stay longer after the event? Checkout <a href="https://lemi.travel/rubyconfth/guide-for-visitors-to-rubyconf-th" title="Guide for visitors to RubyConf TH" target="_blank">our travel guide</a>.</p>
   <div class="map map-venue__map" data-geolocation="13.75893,100.5352453" data-marker="Pullman Bangkok King Power">
     {% comment %}load map for each locations{% endcomment %}
   </div>
