Add link to the hotel booking page

--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -38,7 +38,7 @@ body.home .app-content {
   }
 
   .schedule,
-  .map-venue,
+  .map-venue .call-to-action,
   .list-keynote-speaker {
     margin-top: 2rem;
     margin-bottom: 2rem;
