--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -34,7 +34,7 @@
 @import 'components/icon-hamburger';
 @import 'components/link';
 @import 'components/list';
-@import 'components/list-keynote-speaker';
+@import 'components/list-speaker';
 @import 'components/list-sponsor';
 @import 'components/logo';
 @import 'components/list-social-platform';
