Fix missing top margin for the list of keynote speakers

--- a/_includes/list-keynote-speaker.html
+++ b/_includes/list-keynote-speaker.html
@@ -1,4 +1,4 @@
-<ul class="list-speaker list--unstyled">
+<ul class="list-speaker list-speaker--keynote list--unstyled">
   {% for keynote_speaker in site.data.speakers.keynote %}
   <li class="list-speaker__item">
     <figure class="list-speaker__profile">
