--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -39,7 +39,7 @@ body.home .app-content {
 
   .schedule,
   .map-venue .call-to-action,
-  .list-keynote-speaker {
+  .list-speaker--keynote {
     margin-top: 2rem;
     margin-bottom: 2rem;
 
