Add the list of confirmed speakers (#97)
* Add Radoslav Stankov to speakers list

* Add Piotr Murach to speakers

* Add Giovanni Sakti to speakers

* Add URLs to speaker descriptions

* Add Vishal Chandnani to speakers.yml

* Add Dmitry Salahutdinov to speakers.yml

* Add Leandro Ostera and Tae Noppakun Wongsrinoppakun to speakers.yml

* Add Kazuma Furuhashi to speakers.yml

* Add Gabriel Fortuna to speakers.yml

* Add Rodrigo Urubatan to speakers.yml

* Add Sergey Dolganov to speakers.yml

* Add Jaroslava Košanová to speakers.yml

* Add Harley Davidson Karel to speakers.yml

* Add Shweta Kale to speakers.yml

* Add Phil Nash to speakers.yml

* fix typo Shweta

* other minor grammar tweaks

* Remove Dmitry Salahutdinov from speakers.yml

* Add missing bio for Rodrigo

* Add Vipul AM to speakers.yml

* Add Melvrick Goh Aik Chun to speakers.yml

* Add Enrique Mogollan to speakers.yml

* Add Anton Davydov to speakers.yml

* Add Elle Meredith to speakers.yml

* Fix speaker name

* Add Janko Marohnic to speakers.yml

* Resize all speakers portrait photos

* List general speakers below the keynote speakers

* Shorter speaker bios to fit in the rectangle box on large screens

* Linkify bio to add as many external links as possible (SEO food)

* Use the small screens styles for medium screens

* Fix inconsistently links in bios to the same company

* Exclude URLs randomly failing specs

* Shorten the bio for Gabriel Fortuna to fit in the bio box

* Use https for the Zero One sponsor website

* Fix missing top margin for the list of keynote speakers

* Fix margin between the lists of keynote and general speakers

--- a/_includes/list-keynote-speaker.html
+++ b/_includes/list-keynote-speaker.html
@@ -1,13 +1,13 @@
-<ul class="list-keynote-speaker list--unstyled">
+<ul class="list-speaker list-speaker--keynote list--unstyled">
   {% for keynote_speaker in site.data.speakers.keynote %}
-  <li class="list-keynote-speaker__item">
-    <figure class="list-keynote-speaker__profile">
-      <img src="{{ keynote_speaker.photo_url }}" alt="Photo of {{ keynote_speaker.first_name }} {{ keynote_speaker.last_name }}" class="list-keynote-speaker__photo" />
-      <figcaption class="list-keynote-speaker__name text-branded">
+  <li class="list-speaker__item">
+    <figure class="list-speaker__profile">
+      <img src="{{ keynote_speaker.photo_url }}" alt="Photo of {{ keynote_speaker.first_name }} {{ keynote_speaker.last_name }}" class="list-speaker__photo" />
+      <figcaption class="list-speaker__name text-branded">
         <span>{{ keynote_speaker.first_name }}</span> {{ keynote_speaker.last_name }}
       </figcaption>
-      <a href="https://twitter.com/{{ keynote_speaker.twitter_handle }}" class="list-keynote-speaker__link link link--secondary">{{ keynote_speaker.twitter_handle }}</a>
-      <p class="list-keynote-speaker__bio">
+      <a href="https://twitter.com/{{ keynote_speaker.twitter_handle }}" class="list-speaker__link link link--secondary">{{ keynote_speaker.twitter_handle }}</a>
+      <p class="list-speaker__bio">
         {{ keynote_speaker.bio }}
       </p>
     </figure>
