Add re tag to the keynote speaker image to different them from the general speakers

--- a/_includes/list-keynote-speaker.html
+++ b/_includes/list-keynote-speaker.html
@@ -3,6 +3,7 @@
   <li class="list-speaker__item">
     <figure class="list-speaker__profile">
       <img src="{{ keynote_speaker.photo_url }}" alt="Photo of {{ keynote_speaker.first_name }} {{ keynote_speaker.last_name }}" class="list-speaker__photo" />
+      <span class="list-speaker__tag">Keynote</span>
       <figcaption class="list-speaker__name text-branded">
         <span>{{ keynote_speaker.first_name }}</span> {{ keynote_speaker.last_name }}
       </figcaption>
