Rename Agenda section to Schedule as it's more standard

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
             <a href="#speakers" class="app-navigation__menu-link app-navigation__link">Speakers</a>
           </li>
           <li class="app-navigation__menu-item">
-            <a href="#agenda" class="app-navigation__menu-link app-navigation__link">Agenda</a>
+            <a href="#schedule" class="app-navigation__menu-link app-navigation__link">Schedule</a>
           </li>
           <li class="app-navigation__menu-item">
             <a href="#venue" class="app-navigation__menu-link app-navigation__link">Venue</a>
