--- a/_sass/components/_list-sponsor.scss
+++ b/_sass/components/_list-sponsor.scss
@@ -10,15 +10,40 @@
   }
 
   &__list-company {
+    display: block;
     padding: rem(30px) 0;
   }
 
   &__company {
-    margin-bottom: rem(30px);
+    margin-bottom: rem(40px);
 
     @include media-breakpoint-up('lg') {
       margin-bottom: 0;
     }
+  }
+
+  &__link {
+    display: block;
+    position: relative;
+  }
+
+  &__tag {
+    display: block;
+
+    position: absolute;
+    bottom: -35%;
+    left: 50%;
+    z-index: map-get($zIndex, 'default');
+    transform: translateX(-50%);
+
+    width: auto;
+    padding: 0 4px;
+
+    color: #fff;
+    font-size: map-get($font-sizes, 'xs');
+    text-transform: uppercase;
+
+    background: #f81c49;
   }
 }
 
@@ -51,7 +76,7 @@
         }
 
         @include media-breakpoint-up('lg') {
-          margin-bottom: rem(30px);
+          margin-bottom: rem(40px);
         }
       }
     }
