--- a/_sass/components/_list-sponsor.scss
+++ b/_sass/components/_list-sponsor.scss
@@ -10,15 +10,22 @@
   }
 
   &__list-company {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
     padding: rem(30px) 0;
   }
 
   &__company {
-    margin-bottom: rem(40px);
+    flex: 50% 1 1;
+    margin-bottom: rem(50px);
 
-    @include media-breakpoint-up('lg') {
-      margin-bottom: 0;
+    &:last-child {
+      @include media-breakpoint-down('sm') {
+        margin-bottom: 0;
+      }
     }
   }
 
@@ -31,7 +38,7 @@
     display: block;
 
     position: absolute;
-    bottom: -35%;
+    bottom: -50%;
     left: 50%;
     z-index: map-get($zIndex, 'default');
     transform: translateX(-50%);
@@ -48,73 +55,33 @@
 }
 
 .list-sponsor__list-company {
-  &--platinum {
+  &--ruby .list-sponsor__company:last-child {
+    margin-bottom: 0;
+  }
+
+  &--gold .list-sponsor__company:nth-child(n+3) {
     @include media-breakpoint-up('md') {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
-
-      .list-sponsor__company {
-        @include media-breakpoint-up('md') {
-          flex: 50% 1 1;
-        }
-      }
+      margin-bottom: 0;
     }
   }
 
-  &--gold {
+  &--speaker .list-sponsor__company {
+    margin-bottom: rem(40px);
+
     @include media-breakpoint-up('md') {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
+      flex: 33% 1 1;
+    }
 
-      .list-sponsor__company {
-        @include media-breakpoint-up('md') {
-          flex: 50% 1 1;
-        }
-
-        @include media-breakpoint-up('lg') {
-          margin-bottom: rem(40px);
-        }
-      }
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 
-  &--speaker {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+  &--partner .list-sponsor__company {
+    margin-bottom: rem(40px);
 
-    .list-sponsor__company {
-      flex: 50% 1 1;
-
-      margin-bottom: rem(30px);
-
-      @include media-breakpoint-up('md') {
-        flex: 33% 1 1;
-      }
-    }
-  }
-
-  &--partner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    .list-sponsor__company {
-      flex: 50% 1 1;
-
-      @include media-breakpoint-up('md') {
-        flex: 25% 1 1;
-      }
-
-      @include media-breakpoint-up('lg') {
-        flex: auto 1 1;
-      }
+    @include media-breakpoint-up('md') {
+      flex: 25% 1 1;
     }
   }
 }
