--- a/_sass/components/_list-sponsor.scss
+++ b/_sass/components/_list-sponsor.scss
@@ -66,7 +66,7 @@
       }
     }
 
-    &:nth-child(n+3) {
+    &:last-child {
       @include media-breakpoint-up('md') {
         margin-bottom: 0;
       }
