Add missing opengraph image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 <meta property="og:description" content="{{ meta_description }}" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ site.url }}" />
-<meta property="og:image" content="{{ site.seo.image }}" />
+<meta property="og:image" content="/public/images/social/opengraph.png" />
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="{{ site.url }}" />
