Keep relative paths for manifest and stylesheet files

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,11 +41,11 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/public/images/favicon/apple-icon-144x144.png"/>
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.url }}/public/images/favicon/apple-icon-152x152.png"/>
 
-<link rel="icon" type="image/png" sizes="192x192"  href="{{ site.url }}/public/images/favicon/android-icon-192x192.png"/>
+<link rel="icon" type="image/png" sizes="192x192"  href="/public/images/favicon/android-icon-192x192.png"/>
 <link rel="icon" type="image/png" sizes="32x32" href="{{ site.url }}/public/images/favicon/favicon-32x32.png"/>
 <link rel="icon" type="image/png" sizes="16x16" href="{{ site.url }}/public/images/favicon/favicon-16x16.png"/>
 <link rel="icon" type="image/x-icon" href="{{ site.url }}/public/images/favicon/favicon.ico">
 
-<link rel="manifest" href="{{ site.url }}/public/manifest.json">
+<link rel="manifest" href="/public/manifest.json">
 
-<link rel="stylesheet" href="{{ site.url }}/assets/stylesheets/application.css" type="text/css"/>
+<link rel="stylesheet" href="/assets/stylesheets/application.css" type="text/css"/>
