--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,13 +12,13 @@
 <meta property="og:description" content="{{ meta_description }}" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ site.url }}" />
-<meta property="og:image" content="/public/images/social/opengraph.png" />
+<meta property="og:image" content="{{ site.url }}/public/images/social/opengraph.png" />
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="{{ site.url }}" />
 <meta name="twitter:title" content="{{ meta_title }}" />
 <meta name="twitter:description" content="{{ meta_description }}" />
-<meta name="twitter:image" content="/public/images/social/twitter.png" />
+<meta name="twitter:image" content="{{ site.url }}/public/images/social/twitter.png" />
 
 <meta name="apple-mobile-web-app-title" content="{{ site.name }}"/>
 <meta name="mobile-web-app-capable" content="yes"/>
@@ -32,19 +32,19 @@
 <meta http-equiv="cleartype" content="on">
 
 <meta name="msapplication-TileColor" content="#fff" />
-<meta name="msapplication-TileImage" content="/public/images/favicon/mstile-144x144.png" />
-<meta name="msapplication-square70x70logo" content="/public/images/favicon/mstile-70x70.png" />
-<meta name="msapplication-square150x150logo" content="/public/images/favicon/mstile-150x150.png" />
-<meta name="msapplication-wide310x150logo" content="/public/images/favicon/mstile-310x150.png" />
-<meta name="msapplication-square310x310logo" content="/public/images/favicon/mstile-310x310.png" />
+<meta name="msapplication-TileImage" content="{{ site.url }}/public/images/favicon/mstile-144x144.png" />
+<meta name="msapplication-square70x70logo" content="{{ site.url }}/public/images/favicon/mstile-70x70.png" />
+<meta name="msapplication-square150x150logo" content="{{ site.url }}/public/images/favicon/mstile-150x150.png" />
+<meta name="msapplication-wide310x150logo" content="{{ site.url }}/public/images/favicon/mstile-310x150.png" />
+<meta name="msapplication-square310x310logo" content="{{ site.url }}/public/images/favicon/mstile-310x310.png" />
 
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/images/favicon/apple-icon-144x144.png"/>
-<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/public/images/favicon/apple-icon-152x152.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/public/images/favicon/apple-icon-144x144.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.url }}/public/images/favicon/apple-icon-152x152.png"/>
 
 <link rel="icon" type="image/png" sizes="192x192"  href="/public/images/favicon/android-icon-192x192.png"/>
-<link rel="icon" type="image/png" sizes="32x32" href="/public/images/favicon/favicon-32x32.png"/>
-<link rel="icon" type="image/png" sizes="16x16" href="/public/images/favicon/favicon-16x16.png"/>
-<link rel="icon" type="image/x-icon" href="/public/images/favicon/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.url }}/public/images/favicon/favicon-32x32.png"/>
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.url }}/public/images/favicon/favicon-16x16.png"/>
+<link rel="icon" type="image/x-icon" href="{{ site.url }}/public/images/favicon/favicon.ico">
 
 <link rel="manifest" href="/public/manifest.json">
 
