Only set style attribute if a custom style is defined

--- a/_includes/list-sponsor.html
+++ b/_includes/list-sponsor.html
@@ -6,8 +6,8 @@
       {% for company in sponsor_level.companies %}
         <li class="list-sponsor__company">
           <a href="{{ company.url }}" title="{{ company.name }}" target="_blank" class="list-sponsor__link">
-            <img src="{{ company.logo_url }}" alt="{{ company.name }}" style="{{ company.logo_style }}"/>
-            {% if company.is_partner  %}
+            <img src="{{ company.logo_url }}" alt="{{ company.name }}"{% if company.logo_style %} style="{{ company.logo_style }}"{% endif %}/>
+            {% if company.is_partner %}
               <span class="list-sponsor__tag">{{ company.partner_text }}</span>
             {% endif %}
           </a>
