List Pigeonhole as a partner

--- a/_sass/components/_list-sponsor.scss
+++ b/_sass/components/_list-sponsor.scss
@@ -49,6 +49,7 @@
     color: #fff;
     font-size: map-get($font-sizes, 'xs');
     text-transform: uppercase;
+    white-space: pre;
 
     background: #f81c49;
   }
