Add form and links to social platform to the homepage

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -28,4 +28,7 @@
 @import 'components/form-mailing-list';
 @import 'components/icon';
 @import 'components/link';
+@import 'components/list';
 @import 'components/list-social-platform';
+
+@import 'screens/home';
