Add footer with legal mention and link to past conference

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
 <footer class="app-footer">
   <div class="container">
-
+    <div class="app-footer__legal">
+      &copy; Bangkok.rb
+    </div>
+    <div class="app-footer__link">
+      Past conferences: <a href="/past/2019">2019</a>
+    </div>
   </div>
 </footer>
