--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
 
 @import 'layouts/default';
 
+@import 'components/app-footer';
 @import 'components/btn';
 @import 'components/form';
 @import 'components/form-mailing-list';
