--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -22,6 +22,18 @@
       padding: 0;
     }
   }
+
+  .form-mailing-list .form__control {
+    font-size: map-get($font-sizes, 'xs');
+
+    @include media-breakpoint-up('sm') {
+      font-size: map-get($font-sizes, 'sm');
+    }
+
+    @include media-breakpoint-up('lg') {
+      font-size: map-get($font-sizes, 'lg');
+    }
+  }
 }
 
 .home .social-platform {
