Add text content for the email registration

--- a/_includes/form-mailing-list.html
+++ b/_includes/form-mailing-list.html
@@ -4,5 +4,5 @@
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fd4a02525718b1d58ebaed6a0_4af9421776" tabindex="-1" value=""></div>
   </div>
-  <button type="submit" class="form-mailing-list__btn btn btn--primary">Add me</button>
+  <button type="submit" class="form-mailing-list__btn btn btn--primary">Count me in</button>
 </form>
