--- a/_includes/form-mailing-list.html
+++ b/_includes/form-mailing-list.html
@@ -1,5 +1,6 @@
 <form action="https://rubyconfth.us20.list-manage.com/subscribe/post?u=fd4a02525718b1d58ebaed6a0&id=4af9421776" method="post" class="form-mailing-list form" target="_blank">
   <div class="form__group">
+    <input type="hidden" name="tags" value="2841779">
     <input type="email" name="EMAIL" placeholder="Enter your email address" class="form__control form__control--lg" required />
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fd4a02525718b1d58ebaed6a0_4af9421776" tabindex="-1" value=""></div>
