--- a/_sass/components/_form-mailing-list.scss
+++ b/_sass/components/_form-mailing-list.scss
@@ -2,15 +2,23 @@
   position: relative;
 
   .form__control {
-    padding-right: 155px;
+    @include media-breakpoint-up('md') {
+      padding-right: 155px;
+    }
   }
 
   .btn {
-    position: absolute;
-    top: 9px;
-    right: 9px;
 
-    height: rem(51px);
-    padding: 0.75rem 2rem;
+    width: 100%;
+
+    @include media-breakpoint-up('md') {
+      position: absolute;
+      top: 9px;
+      right: 9px;
+
+      width: auto;
+      height: rem(51px);
+      padding: 0.75rem 2rem;
+    }
   }
 }
